correct overlap issue

--- a/productstyle.css
+++ b/productstyle.css
@@ -354,7 +354,7 @@ form .counter_btn .counter input{
     justify-content: space-between;
     overflow: hidden;
     position: relative;
-    height: 5%;
+    height: 70px;
     padding: 1%;
     padding-bottom: 0;
     padding-left: 3%;
